put menu items in context

--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -251,7 +251,10 @@
         </div>
         {%block content%} {%endblock%}
       </div>
+      {% block categories %} {%endblock%}
     </section>
+
+    
 
     <footer class="footer">
       <dl class="footer-items">
