--- a/runup_app/templates/main_content.html
+++ b/runup_app/templates/main_content.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}" />
 {% endblock %} {% block content %} {% comment %} {{category}} {% endcomment %}
 <div class="infinite-container">
-  {% for prod in prod_objects %}
+  {% for prod in contents %}
   <div class="infinite-item">
     <div class="box">
       <div class="img_box">
