--- a/runup_app/templates/sub_content.html
+++ b/runup_app/templates/sub_content.html
@@ -6,12 +6,12 @@
 
 <div class="container">
   <div class="target_container">
-    <a href="{{main.href}}" class="target_box">
-      <img src="{{main.img}}" alt="image" class="target_img" />
+    <a href="{{main.Url}}" class="target_box">
+      <img src="{{main.Img_url}}" alt="image" class="target_img" />
     </a>
     <div class="info">
-      <b>{{main.brand}}</b>
-      <div class="price">{% load humanize %} {{main.price|intcomma}}원</div>
+      <b>{{main.Brand_kr}}</b>
+      <div class="price">{% load humanize %} {{main.Origin_Price|intcomma}}원</div>
     </div>
   </div>
   <div class="sim_container">
@@ -61,13 +61,13 @@
       {% for content in contents %}
       <div class="box">
         <div class="img_box">
-          <a href="{{content.href}}">
-            <img class="image" src="{{content.img}}" alt="image" class="image" />
+          <a href="{{content.Sim_prod.Url}}">
+            <img class="image" src="{{content.Sim_prod.Img_url}}" alt="image" class="image" />
           </a>
         </div>
         <div class="info">
-          <b>{{content.brand}}</b>
-          <div class="price">{% load humanize %} {{content.price|intcomma}}원</div>
+          <b>{{content.Sim_prod.Brand.Name_kr}}</b>
+          <div class="price">{% load humanize %} {{content.Sim_prod.price|intcomma}}원</div>
         </div>
       </div>
       {% endfor %}
