--- a/runup_app/templates/main_content.html
+++ b/runup_app/templates/main_content.html
@@ -7,7 +7,7 @@
   <div class="infinite-item">
     <div class="box">
       <div class="img_box">
-        <a onclick="animation('{% url 'product' prod.pk%}')">
+        <a onclick="animation('{% url 'product' prod.id %}')">
           <img src="{{ prod.Img_url }}" alt="image" class="image" />
         </a>
       </div>
