--- a/runup_app/static/recommendapp/mobile_index.css
+++ b/runup_app/static/recommendapp/mobile_index.css
@@ -435,12 +435,16 @@ input {
   border-top: 1px solid #e1e4e8;
 }
 
-.wrap {
+/* .wrap {
   width: 100%;
-}
+} */
 
 .category-infinite {
   overflow: auto;
+}
+
+.header {
+  box-shadow: none;
 }
 
 /* 기존에 있던 css */
@@ -449,9 +453,9 @@ input {
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   /* margin-top: 46px; */
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .infinite-item {
