--- a/runup_app/templates/styleCatch.html
+++ b/runup_app/templates/styleCatch.html
@@ -28,6 +28,7 @@
           <form action="{% url 'analyze' %}" enctype="multipart/form-data" method='POST' style="display:none">
             {% csrf_token %}
             <input type="file" id="photo" name='photo' capture="camera" accept="image/*" style="display:none" >
+            <input type="file" id="album" name='album' accept="image/*" style="display:none" >
             <input type="submit" id="submit" >
           </form>
           <span>카메라</span>
@@ -36,8 +37,10 @@
       </div>
         <div class="styleCatch-search-wrap">
           <div class="styleCatch-search">
+            <label for="album">
             <img src="{% static 'assets/image-search-icon.svg' %}" alt="image-search-icon" />
             <span>찾아보기</span>
+            </label>
           </div>
         </div>
       </section>
@@ -54,6 +57,11 @@
   <script>
     $(document).ready(function () {
         if (!('url' in window) && ('webkitURL' in window)) { window.URL = window.webkitURL; } $('#photo').change(function (e) {
+          $('#pic').attr('src', URL.createObjectURL(e.target.files[0]));
+        });
+      });
+    $(document).ready(function () {
+        if (!('url' in window) && ('webkitURL' in window)) { window.URL = window.webkitURL; } $('#album').change(function (e) {
           $('#pic').attr('src', URL.createObjectURL(e.target.files[0]));
         });
       });
