--- a/runup_app/templates/ctg_content.html
+++ b/runup_app/templates/ctg_content.html
@@ -1,40 +1,18 @@
 {% extends 'layout.html'%} {% load static %} {% block style%}
 <link rel="stylesheet" type="text/css" href="{% static 'recommendapp/index.css' %}" />
 <link rel="stylesheet" type="text/css" media="(max-width: 480px)" href="{% static 'recommendapp/mobile_index.css' %}" />
+<script src="{% static 'js/categoryPage.js' %}" defer></script>
 {% endblock %} {% block content %}
 <!--********************************* 카테고리 헤더 *********************************-->
 <section class="category-main-section">
   <div class="category-main-title">
-    <h1>카테고리</h1>
+    <h1>{{ s_ctg.Name_kr }}</h1>
     <i class="fas fa-times category-cancel-icon"></i>
-  </div>
-  <div class="category-main-items">
-    <div class="category-main-item">
-      <img class="category-item-icon" src="{% static 'assets/longTshirt-icon.svg' %}" alt="longTshirt-icon" />
-      <span>아우터</span>
-    </div>
-    <div class="category-main-item">
-      <img class="category-item-icon" src="{% static 'assets/longTshirt-icon.svg' %}" alt="longTshirt-icon" />
-      <span>아우터</span>
-    </div>
-    <div class="category-main-item">
-      <img class="category-item-icon" src="{% static 'assets/longTshirt-icon.svg' %}" alt="longTshirt-icon" />
-      <span>아우터</span>
-    </div>
-    <div class="category-main-item">
-      <img class="category-item-icon" src="{% static 'assets/longTshirt-icon.svg' %}" alt="longTshirt-icon" />
-      <span>아우터</span>
-    </div>
   </div>
 </section>
 
 <div class="category-infinite">
   <section class="category-sub-section">
-    <div class="category-sub-title">
-      <h3 class="category-sub-title-item">전체의류</h3>
-      <h3 class="category-sub-title-item">{{ s_ctg.Name_kr }}</h3>
-    </div>
-    <!-- <h1 class="category-title">{{ctg_name}}</h1> -->
     <div class="category-sub">
       <div class="category-sub-filter">
         <div class="category-sub-filter-box">
@@ -80,7 +58,7 @@
     <div class="infinite-item">
       <div class="box">
         <div class="img_box">
-        <a onclick="animation('{% url 'product' prod.id %}')">
+          <a onclick="animation('{% url 'product' prod.id %}')">
             <img src="{{ prod.Img_url }}" alt="image" class="image" />
           </a>
         </div>
@@ -93,10 +71,9 @@
     {% endfor %}
   </div>
   {% if contents.has_next %}
-    <a class="infinite-more-link" href="?page={{ contents.next_page_number }}&s_ctg={{s_ctg.id }}">More</a>
+  <a class="infinite-more-link" href="?page={{ contents.next_page_number }}&s_ctg={{s_ctg.id}}">More</a>
   {% endif %}
 </div>
-
 
 <script>
   if (window.console != null) {
@@ -105,7 +82,7 @@
     coneolse.log("console is null");
   }
   var infinite = new Waypoint.Infinite({
-    element: $(".infinite-container")[0]
+    element: $(".infinite-container")[0],
   });
 </script>
 {% comment %} <input id="page" type="hidden" value="2" /> <button id="callmorepost" type="button" class="btn btn-primary btn-block">More Post</button> {% endcomment %}
