--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -68,7 +68,7 @@
           </div>
           <div class="category-menu-dd-section">
             {% for j in sub_ctgs %} {% if j.Main.pk == i.pk %}
-            <a href="{% url 'category' %}?s_ctg={{j.pk}}">
+            <a class="category-menu-a" href="{% url 'category' %}?s_ctg={{j.pk}}">
               <dd class="category-menu-dd">{{ j.Name_kr }}</dd>
             </a>
             {% endif %} {% endfor %}
@@ -150,25 +150,19 @@
           </a>
         </dd>
         <dt class="sr-only">Category</dt>
-        <dd class="footer-item footer-category">
-          <a class="category" href="#">
-            <img class="category" src="{% static 'assets/category-icon.svg' %}" alt="category-icon" />
-            <span class="category">CATEGORY </span>
-          </a>
+        <dd class="category footer-item footer-category">
+          <img class="category" src="{% static 'assets/category-icon.svg' %}" alt="category-icon" />
+          <span class="category">CATEGORY </span>
         </dd>
         <dt class="sr-only">likes</dt>
-        <dd class="footer-item footer-likes">
-          <a class="likes" href="#">
-            <img class="likes" src="{% static 'assets/likes-icon.svg' %}" alt="likes-icon" />
-            <span class="likes">LIKES</span>
-          </a>
+        <dd class="likes footer-item footer-likes">
+          <img class="likes" src="{% static 'assets/likes-icon.svg' %}" alt="likes-icon" />
+          <span class="likes">LIKES</span>
         </dd>
         <dt class="sr-only">My Page</dt>
-        <dd class="footer-item footer-myPage">
-          <a class="myPage" href="#">
-            <img class="myPage" src="{% static 'assets/myPage-icon.svg' %}" alt="myPage-icon" />
-            <span class="myPage">MY PAGE</span>
-          </a>
+        <dd class="myPage footer-item footer-myPage">
+          <img class="myPage" src="{% static 'assets/myPage-icon.svg' %}" alt="myPage-icon" />
+          <span class="myPage">MY PAGE</span>
         </dd>
       </dl>
     </footer>
