--- a/runup_app/templates/sub_content.html
+++ b/runup_app/templates/sub_content.html
@@ -6,12 +6,12 @@
 
 <div class="container">
   <div class="target_container">
-    <a href="{{main.Url}}" class="target_box">
-      <img src="{{main.Img_url}}" alt="image" class="target_img" />
+    <a href="{{main.href}}" class="target_box">
+      <img src="{{main.img}}" alt="image" class="target_img" />
     </a>
     <div class="info">
-      <b>{{main.Brand.Name_kr}}</b>
-      <div class="price">{% load humanize %} {{main.Origin_price|intcomma}}원</div>
+      <b>{{main.brand}}</b>
+      <div class="price">{% load humanize %} {{main.price|intcomma}}원</div>
     </div>
   </div>
   <div class="sim_container">
@@ -48,10 +48,10 @@
               <a href="#">상푼순</a>
             </dd>
             <dd>
-              <a href="?ctg={{s_ctg}}&flt=1">높은가격순</a>
+              <a href="?ctg={{ctg}}&flt=1">높은가격순</a>
             </dd>
             <dd>
-              <a href="?ctg={{s_ctg}}&flt=2">낮은가격순</a>
+              <a href="?ctg={{ctg}}&flt=2">낮은가격순</a>
             </dd>
           </dl>
         </aside>
@@ -61,13 +61,13 @@
       {% for content in contents %}
       <div class="box">
         <div class="img_box">
-          <a href="{{content.Sim_prod.Url}}">
-            <img class="image" src="{{content.Sim_prod.Img_url}}" alt="image" class="image" />
+          <a href="{{content.href}}">
+            <img class="image" src="{{content.img}}" alt="image" class="image" />
           </a>
         </div>
         <div class="info">
-          <b>{{content.Sim_prod.Brand.Name_kr}}</b>
-          <div class="price">{% load humanize %} {{content.Sim_prod.Origin_price|intcomma}}원</div>
+          <b>{{content.brand}}</b>
+          <div class="price">{% load humanize %} {{content.price|intcomma}}원</div>
         </div>
       </div>
       {% endfor %}
