--- a/runup_app/templates/main_content.html
+++ b/runup_app/templates/main_content.html
@@ -12,7 +12,7 @@
   <a href="#">
     <span>SALE</span>
   </a>
-  <a href="#">
+  <a href="{% url 'brand_page' %}">
     <span>BRAND</span>
   </a>
 </div>
