--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -18,6 +18,10 @@
     {%block style%} {%endblock%}
   </head>
   <body>
+    <!-- desktop 서비스 준비중 문구 -->
+    <section class="desktop">
+      <img src="{% static 'assets/service.png' %}" alt="service-image" />
+    </section>
     {% comment %} 헤더 {% endcomment %}
     <header class="header">
       <div class="header-title">
