--- a/accounts/static/recommendapp/mobile_layout.css
+++ b/accounts/static/recommendapp/mobile_layout.css
@@ -24,6 +24,10 @@ body {
   font-family: "Noto Sans KR", sans-serif;
 }
 
+.desktop {
+  display: none;
+}
+
 /* ResetCss */
 li,
 ul,
@@ -129,6 +133,8 @@ input:focus {
   align-items: center;
   margin-top: 65px;
   margin-bottom: 65px;
+  /* width: 100%;
+  width: 300px; */
 }
 
 /* category-menu */
@@ -278,7 +284,7 @@ input:focus {
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 3;
+  z-index: 555;
 }
 
 .footer-items {
