--- a/runup_app/static/recommendapp/layout.css
+++ b/runup_app/static/recommendapp/layout.css
@@ -1,162 +1,24 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-}
-
 .header {
-  padding: 10px;
-  display: flex;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-}
-.logo_a {
-  width: 300px;
-}
-.logo_img {
-  width: 100%;
+  display: none;
 }
 
 .wrap {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  display: none;
 }
 
-.menu_bar {
-  margin-left: 50px;
-  margin-top: 2%;
-  width: 20%;
-  display: flex;
-  justify-content: center;
+.footer {
+  /* display: none; */
+  /* position: absolute;
+  top: -9999px;
+  left: -9999px;
+  z-index: -1;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  visibility: hidden; */
 }
 
-/******************************Search***********************************/
-.search {
-  text-align: center;
-  padding: 20px;
-  width: 150px;
-  height: 60px;
-  color: white;
-  background-color: #29abe2;
-  border-radius: 4px;
-  border: none;
-  /* margin-bottom: 20px; */
-}
-
-.search:hover {
-  background-color: #457abf;
-}
-
-/******************************설문조사***********************************/
-
-.survey {
-  height: 60px;
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #595958;
-  border: none;
-  color: #ffffff;
-  text-align: center;
-  padding: 20px;
-  width: 150px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin-bottom: 5px;
-}
-
-.survey span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.survey span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.survey:hover span {
-  padding-right: 25px;
-}
-
-.survey:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-
-.content {
-  width: 85%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-
-/* .footer{
-    color: white;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
-} */
-
-.option {
-  font-weight: bold;
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-/******************************fix***********************************/
-
-.fix {
-  height: 60px;
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #595958;
-  border: none;
-  color: #ffffff;
-  text-align: center;
-  padding: 20px;
-  width: 150px;
-  transition: all 0.5s;
-  cursor: pointer;
-}
-
-.fix span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.fix span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.fix:hover span {
-  padding-right: 25px;
-}
-
-.fix:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-.fix > a {
-  font-size: xx-small;
+.desktop img {
+  width: 100%;
+  height: 100vh;
 }
