--- a/runup_app/static/recommendapp/mobile_layout.css
+++ b/runup_app/static/recommendapp/mobile_layout.css
@@ -24,6 +24,10 @@ body {
   font-family: "Noto Sans KR", sans-serif;
 }
 
+.desktop {
+  display: none;
+}
+
 /* ResetCss */
 li,
 ul,
@@ -278,7 +282,7 @@ input:focus {
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 3;
+  z-index: 555;
 }
 
 .footer-items {
