--- a/runup_app/templates/layout.html
+++ b/runup_app/templates/layout.html
@@ -18,10 +18,6 @@
     {%block style%} {%endblock%}
   </head>
   <body>
-    <!-- desktop 서비스 준비중 문구 -->
-    <section class="desktop">
-      <img src="{% static 'assets/service.png' %}" alt="service-image" />
-    </section>
     {% comment %} 헤더 {% endcomment %}
     <header class="header">
       <div class="header-title">
@@ -127,7 +123,7 @@
         <dl class="likes-menu">
           <dt>최근 본 상품</dt>
           <dd>최근 본 이미지 띄우기</dd>
-          <dt>내가 좋아요 한 상품</dt>
+          <dt><a href='{% url 'likes' %}'>내가 좋아요 한 상품</a></dt>
           <dd>내가 좋아요 한 상품 띄우기</dd>
         </dl>
       </section>
